# mcstructure

./: .gitignore  .readthedocs.yaml  Cargo.toml  MANIFEST.in  README.md  README_CN.md  pyproject.toml
knowledge/promot/: BOSS_STRUCTURE_SKILL.md  CHINESE_ARCHITECTURE_SKILL.md  README.md
knowledge/promot/large_structure_workflow/: EXAMPLES.md  PROMPT_TEMPLATE.md  SKILL.md  WORK_CONTRACT.md
knowledge/samples/: 22石桌.mcstructure  33石桌.mcstructure  告示牌示例.mcstructure  带颜色字告示牌示例.mcstructure  悬挂的告示牌示例.mcstructure  贴在墙上的告示牌示例.mcstructure
knowledge/samples/JianghuFantasy_export/: zuixianlou.mcstructure  城墙1.mcstructure  城墙2.mcstructure  城墙转角1.mcstructure  城墙转角2.mcstructure  客栈1.mcstructure  客栈2.mcstructure  宫殿城墙1.mcstructure  宫殿城墙2.mcstructure  宫殿建筑1.mcstructure  宫殿建筑2.mcstructure  宫殿建筑3.mcstructure  宫殿建筑4.mcstructure  宫殿建筑5.mcstructure  宫殿祠堂1.mcstructure  小屋1.mcstructure  小屋3.mcstructure  小屋4.mcstructure  市场1.mcstructure  市场2.mcstructure  市场3.mcstructure  市场4.mcstructure  市场5.mcstructure  市场6.mcstructure  帆船1.mcstructure  废弃的小屋1.mcstructure  汉白玉楼梯.mcstructure  白玉京.mcstructure  石狮子1.mcstructure  石狮子2.mcstructure  院落1.mcstructure  院落2.mcstructure
rust/: lib.rs
scripts/: benchmark_structure_load.py  structure_work.py
scripts/structure_workflow/: __init__.py  cli.py  exporter.py  model.py  runner.py  scaffold.py
src/mcstructure/: __init__.py  _fast_nbt.py  _native.pyi  plan.py
tests/: test_structure.py  test_structure_plan.py  test_structure_workflow.py
workset/example_work/: BRIEF.md  README.md  main.py  project.json
workset/structure_examples/: custom_entity.py  waterlogged.py
(+23 files in other folders)
