[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-rust>=1.12"]
build-backend = "setuptools.build_meta"

[project]
name = "mcstructure"
version = "0.0.1b6"
description = "Read and write Minecraft .mcstructure files."
dependencies = [
    "numpy==2.3.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
keywords = [
    "mcstructure",
    "Minecraft",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "mypy==1.16.1",
  "black==25.1.0",
]
docs = [
    "furo",
    "myst-parser>=2",
    "Sphinx>=7",
    "sphinx-copybutton>=0",
]

[tool.mypy]
strict = true

[tool.setuptools.package-data]
mcstructure = ["_vendor/NBTX_LICENSE.txt", "_native.pyi"]

[tool.setuptools.exclude-package-data]
mcstructure = ["_native*.pyd", "_native*.so"]

[[tool.setuptools-rust.ext-modules]]
target = "mcstructure._native"
path = "Cargo.toml"
binding = "PyO3"
optional = true

[project.urls]
"Documentation" = "https://mcstructure.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/phoenixr-codes/mcstructure/"
